[metadata]
name = app
url = https://github.com/bcgov/epic-engage
author = MET Team
author_email =
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    Topic :: Modern Engagement
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.12
license = Apache Software License Version 2.0
description = A short description of the project
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.12, <3.13
include_package_data = True
packages = find:

[options.package_data]
met_api =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore = I001, I003, I004, E126, W504
exclude = .git,*migrations*
max-line-length = 120
docstring-min-length = 10
import-order-style = pep8
application-import-names = met_api,tests
per-file-ignores =
    */__init__.py:F401
    */analytics.py:B902
    */snowplow_tracker.py:B902

[pycodestyle]
max-line-length = 120
ignore = E501
docstring-min-length = 10
notes = FIXME,XXX  # TODO is ignored
match-dir = src/met_api
ignored-modules = flask_sqlalchemy, sqlalchemy
per-file-ignores =
    */__init__.py:F401
good-names =
    b,
    d,
    i,
    e,
    f,
    u,
    rv,
    logger,
    id

[pylint]
ignore = migrations,test
max-line-length = 120
notes = FIXME,XXX,TODO
ignored-modules = flask_sqlalchemy,sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes = scoped_session
generated-members = Error
min-similarity-lines = 15
disable = C0301,W0511,W0621  # added W0621 for 'redefined-outer-name' noise
load-plugins = pylint_flask
min-public-methods = 1


[isort]
line_length = 120
indent = 4
multi_line_output = 4
lines_after_imports = 2
known_first_party = met_api,tests
no_lines_before = LOCALFOLDER
force_sort_within_sections = True

[tool:pytest]
addopts = --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml
testpaths = tests/unit
filterwarnings =
    ignore::UserWarning
